# G4OpticksTest

./: CMakeLists.txt  ColorReader.cc  ConfigurationManager.cc  ConfigurationManagerMessenger.cc  Ctx.cc  G4.cc  G4OpticksTest.cc  G4OpticksTest.rst  L4Scintillation.cc  PrimaryGeneratorAction.cc  README.md  TrackerSD.cc  ckm.bash  cm.txt  mu.mac  muon.mac  muon_noIO.mac  muon_noIO_noopticks.mac  muon_noIO_opticks.mac  om.sh  positrons.mac  readHits.cc  set_env.sh  set_env_hanshome.sh  set_env_lq.sh  setup_opticks.sh
gdml/: CerenkovMinimal.gdml  G4Opticks.gdml  G4Opticks_1.gdml  G4Opticks_100.gdml  G4Opticks_10000.gdml  G4Opticks_50.gdml  G4Opticks_5000.gdml  G4Opticks_50000.gdml  G4Opticks_test.gdml  LArTPC.gdml  crystalcal_pbwo.gdml  singlecrystal_PbF2.gdml
grid/: README.md  env_grid  env_grid.sh  merge.bash  my_G4.bash  my_G4.csh  run_G4_grid.bash  run_G4_grid.csh  sleep_grid
include/: ActionInitialization.hh  CalorimeterHit.hh  CalorimeterSD.hh  ColorReader.hh  ConfigurationManager.hh  ConfigurationManagerMessenger.hh  Ctx.hh  DRCalorimeterHit.hh  DRCalorimeterSD.hh  DetConOrg.hh  DetectorConstruction.hh  Event.hh  EventAction.hh  G4.hh  G4OpticksTestClasses.hh  InteractionHit.hh  InteractionSD.hh  L4Scintillation.hh  OpHit.hh  ParticleChange.hh  PhotonHit.hh  PhotonSD.hh  PhysicsConfigurator.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RadiatorSD.hh  RootIO.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  StackingActionMessenger.hh  SteppingAction.hh  TrackInfo.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh  lArTPCHit.hh  lArTPCSD.hh
macros/: init_vis.mac  muon_G4.mac  muon_IO.mac  muon_IO_noPhotons.mac  muon_IO_noopticks.mac  muon_noIO.mac  muon_noIO_noopticks.mac  pip_IO_DR.mac  time.mac  timeout.mac
scripts/: bench.C  hit.py  plote.C  plote_hp.C  run.sh  scan.sh
src/: ActionInitialization.cc  CalorimeterHit.cc  CalorimeterSD.cc  ColorReader.cc  ConfigurationManager.cc  ConfigurationManagerMessenger.cc  Ctx.cc  DRCalorimeterHit.cc  DRCalorimeterSD.cc  DetConOrg.cc  DetectorConstruction.cc  Event.cc  EventAction.cc  G4.cc  InteractionHit.cc  InteractionSD.cc  L4Cerenkov.cc  L4Scintillation.cc  PhotonHit.cc  PhotonSD.cc  PhysicsConfigurator.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RadiatorSD.cc  RootIO.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  StackingActionMessenger.cc  SteppingAction.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc  lArTPCHit.cc  lArTPCSD.cc
xml/: selection.xml
